--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activity.ProfileFragment">
 
+    <ImageView
+        android:id="@+id/iv_profile"
+        android:src="@drawable/ic_baseline_person_24"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="200dp"
+        android:scaleType="fitXY"
+        android:layout_height="200dp"/>
+    <ImageView
+        android:id="@+id/btn_sunting"
+        app:layout_constraintTop_toTopOf="@id/iv_profile"
+        app:layout_constraintEnd_toEndOf="@id/iv_profile"
+        android:src="@drawable/ic_baseline_edit_24"
+        android:background="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <EditText
         android:id="@+id/et_username"
         android:hint="Username"
@@ -16,7 +34,7 @@
         android:layout_marginTop="10dp"
         android:paddingStart="10dp"
         android:background="@drawable/edit_text_custom"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
