--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@id/title"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
-        tools:listitem="@layout/card_movie"
+        tools:listitem="@layout/card_favorites"
         android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
