--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blue">#104075</color>
     <color name="light_blue">#01b4e4</color>
     <color name="light_green">#90cea1</color>
+    <color name="red">#EA2D42</color>
 </resources>
